--- a/src/pages/Work.css
+++ b/src/pages/Work.css
@@ -1,17 +1,9 @@
-main {
-  padding: 20px;
-  text-align: center;
-}
-
-h1 {
-  margin-bottom: 20px;
-}
-
-.grid {
+.work-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   gap: 20px;
+  padding: 20px;
 }
 
 .card {
@@ -19,8 +11,8 @@ h1 {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  width: 350px; /* Increase the width */
-  min-height: 450px; /* Set a minimum height for equal length */
+  width: 350px;
+  min-height: 450px;
   display: flex;
   flex-direction: column;
   transition: transform 0.2s ease-in-out;
@@ -54,48 +46,19 @@ h1 {
   color: #6c757d;
 }
 
+.card-links {
+  display: flex;
+  justify-content: space-between;
+}
+
 .card-link {
   display: inline-block;
   color: #007bff;
   text-decoration: none;
-  margin-right: 10px; /* Add margin between buttons */
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 .card-link:hover {
   text-decoration: underline;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-content {
-  background-color: #fff;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  max-width: 600px;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
